5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1716_2507.log
== SUBMITION (2019-05-16 15:57:05) 
-- CODE:
qip = int(input("quantidade inicial: "))
pcm = int(input("percentual de crescimebnto: "))

meses = 0

while(qip > 0 and qip < 8000):
	pirvenmes = int(input("Qauntidade para venda mes: "))
-- EXECUTION TIME:
0.157965
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 7, in <module>
    pirvenmes = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:59:42) 
-- CODE:
qip = int(input("quantidade inicial: "))
pcm = int(input("percentual de crescimebnto: "))

meses = 0

while(qip > 0 and qip < 8000):
	pirvenmes = int(input("Qauntidade para venda mes: "))
	qip = qip + (qip*pcm)
	qip = qip - privenmes
	meses = meses + 1
	if(qip <=0):
		print("zero".upper())
	elif(qip >= 8000):
		print("maximo".upper())
print(meses)
-- EXECUTION TIME:
0.224035
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 9, in <module>
    qip = qip - privenmes
NameError: name 'privenmes' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:59:48) 
-- CODE:
qip = int(input("quantidade inicial: "))
pcm = int(input("percentual de crescimebnto: "))

meses = 0

while(qip > 0 and qip < 8000):
	pirvenmes = int(input("Qauntidade para venda mes: "))
	qip = qip + (qip*pcm)
	qip = qip - privenmes
	meses = meses + 1
	if(qip <=0):
		print("zero".upper())
	elif(qip >= 8000):
		print("maximo".upper())
print(meses)
-- EXECUTION TIME:
0.207623
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 9, in <module>
    qip = qip - privenmes
NameError: name 'privenmes' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:00:04) 
-- CODE:
qip = int(input("quantidade inicial: "))
pcm = int(input("percentual de crescimebnto: "))

meses = 0

while(qip > 0 and qip < 8000):
	pirvenmes = int(input("Qauntidade para venda mes: "))
	qip = qip + (qip * pcm)
	qip = qip - privenmes
	meses = meses + 1
	if(qip <=0):
		print("zero".upper())
	elif(qip >= 8000):
		print("maximo".upper())
print(meses)
-- EXECUTION TIME:
0.152098
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 9, in <module>
    qip = qip - privenmes
NameError: name 'privenmes' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:41:27) 
-- CODE:
qi = int(input("quantidade inicial: "))
pc = int(input("percentual de crescimento mensal: "))

meses = 0

while(0 < qi < 8000):
	qprv = int(input("Quantidade para venda mes: "))
	qi = qi + (qi * (pc/100))
	qi = qi - qprv
	meses = meses + 1
	if(qi <= 0):
		print("zero".upper())
	elif(qip >= 8000):
		print("maximo".upper())
print(meses)
-- EXECUTION TIME:
0.755435
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 13, in <module>
    elif(qip >= 8000):
NameError: name 'qip' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:41:33) 
-- CODE:
qi = int(input("quantidade inicial: "))
pc = int(input("percentual de crescimento mensal: "))

meses = 0

while(0 < qi < 8000):
	qprv = int(input("Quantidade para venda mes: "))
	qi = qi + (qi * (pc/100))
	qi = qi - qprv
	meses = meses + 1
	if(qi <= 0):
		print("zero".upper())
	elif(qip >= 8000):
		print("maximo".upper())
print(meses)
-- EXECUTION TIME:
0.627061
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 13, in <module>
    elif(qip >= 8000):
NameError: name 'qip' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:42:17) 
-- CODE:
qi = int(input("quantidade inicial: "))
pc = int(input("percentual de crescimento mensal: "))

meses = 0

while(0 < qi < 8000):
	qprv = int(input("Quantidade para venda mes: "))
	qi = qi + (qi * (pc/100))
	qi = qi - qprv
	meses = meses + 1
	if(qi <= 0):
		print("ZERO")
	elif(qip >= 8000):
		print("MAXIMO")
print(meses)
-- EXECUTION TIME:
0.654482
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 13, in <module>
    elif(qip >= 8000):
NameError: name 'qip' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:42:30) 
-- CODE:
qi = int(input("quantidade inicial: "))
pc = int(input("percentual de crescimento mensal: "))

meses = 0

while(0 < qi < 8000):
	qprv = int(input("Quantidade para venda mes: "))
	qi = qi + (qi * (pc/100))
	qi = qi - qprv
	meses = meses + 1
	if(qi <= 0):
		print("ZERO")
	elif(qi >= 8000):
		print("MAXIMO")
print(meses)
-- EXECUTION TIME:
0.801633
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
